unpackaged/config/upgrade/07 - upgrade - v2.9/02_custompicklist/objects/rio_ed__Fee_Line__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Course_Connection_Fee_Type_Option__c</fullName>
        <label>Course Connection Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Course_Connection_Fee_Type__c</fullName>
        <label>Course Connection Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Other_Fee_Type_Option__c</fullName>
        <label>Other Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rio_ed__Other_Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Other_Fee_Type__c</fullName>
        <label>Other Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
</CustomObject>